--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>harish</h1>
+    <h1>new name</h1>
     <img width="200px" src="profile.jfif" alt="">
     <p>my profile text</p>
 </body>
