--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>harish</h1>
     <h1>new name</h1>
+    <h1>old name</h1>
     <img width="200px" src="profile.jfif" alt="">
     <p>my profile text</p>
 </body>
